--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
         --text-color: #757575;
         --typical-lh: 1.19;
         --second-font: 'Raleway', 'sans-serif';
+        --border-color: #F5F4FA;
+        --main-color: #FFFFFF;
+        
 }
 
 
@@ -19,7 +22,7 @@
 color: #2196F3;
 }
 body {font-family: 'Roboto', 'sans-serif';
-    background-color: #FFFFFF;}
+    background-color: var(--main-color);}
 
 /*------header---------*/
 .logo {font-family: var(--second-font);
@@ -36,7 +39,7 @@ body {font-family: 'Roboto', 'sans-serif';
     color: #000000;}
 
 .logo-white {
-    color: #FFFFFF;}
+    color: var(--main-color);}
 
 .header-link {
     font-weight: 500;
@@ -66,7 +69,7 @@ body {font-family: 'Roboto', 'sans-serif';
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: #FFFFFF;}
+    color: var(--main-color);}
 
 .hero-button {
     cursor: pointer;
@@ -80,7 +83,7 @@ body {font-family: 'Roboto', 'sans-serif';
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
-    color: #FFFFFF;}
+    color: var(--main-color);}
 
 /* ----------advanteges--------- */
 
@@ -180,14 +183,16 @@ body {font-family: 'Roboto', 'sans-serif';
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
-    background-color: #F5F4FA;
+    background-color: var(--border-color);
     border-radius: 4px;
+    border: var(--border-color);
         
 }
 
 .btn:hover {
+    border: #2196F3;
     background-color: #2196F3;
-    color: #FFFFFF;
+    color: var(--main-color);
 }
 
 .galery-title {
