--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ body {
 
 .contacts-link:hover,
 .header-link:hover,
+.footer-link:hover,
 .header-link:focus {
     color: var(--accent-color);}
 
@@ -108,6 +109,7 @@ body {
     overflow: hidden;
 }
 .advanteges-title {
+    font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
     }
